<resources>
    <string name="app_name">Which City Is Closer</string>
    <string name="titleHomeFragment">Which City Is Closer</string>
    <string name="titleOptionsFragment">Options</string>
    <string name="titleHighScoresFragment">High Scores</string>
    <string name="titlePlayFragment">Which City Is Closer</string>
    <string name="titleResultFragment">Which City Is Closer</string>
    <string name="btnplayhome">Play</string>
    <string name="btnhighscorehome">High Score</string>
    <string name="btnquithome">Quit</string>
    <string name="imagecontenthome">Logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="delete_the_high_scores_btn_text">Delete the high scores</string>
    <string name="right">Right!</string>
    <string name="score">Your score: 4</string>
    <string name="city1result">London is 10552.6 miles away</string>
    <string name="city2result">New York is 9935 miles away</string>
    <string name="next">Next</string>
    <string name="units">Units</string>
    <string name="dark_mode">Dark mode</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="imgHomeDescription">App Logo</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="placeholder_image">placeholder image</string>
    <string name="high_scores">High Scores</string>
    <string name="options">Options</string>
    <string name="save">Save</string>
    <string name="which_city_is_closer_to_text">Which city is closer to Sydney?</string>
    <string name="answerCorrect">Correct!</string>
    <string name="answerWrong">Wrong!</string>
    <string name="error">Error</string>
    <string name="share">share</string>
    <string name="tryAgainText">Try again</string>
    <string name="correctText">Correct!</string>
    <string name="wrongText">Wrong!</string>
    <string name="errorText">Error</string>
    <string name="distanceResultText">%s is %d %s away from %s</string>
    <string name="shareText">My score is %d. Can you beat it? https://play.google.com/store/apps/developer?id=Pawel+Sznura</string>
    <string name="askToConfirmDeleteHsTitle">There is no return!</string>
    <string name="askToConfirmDeleteHsMessage">\"Are you sure you want to delete the high scores? \"</string>
    <string name="confirm">Confirm</string>
    <string name="highscoresDeletedMessage">High scores were deleted!</string>
    <string name="usernameSaved">Username saved</string>

</resources>