<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MyFragment"
    tools:context=".ResultFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <TextView
        android:id="@+id/rightWrongResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBig"
        android:text="@string/right"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <TextView
        android:id="@+id/scoreResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginMedium"
        android:text="@string/score"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnNextResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city1ResultText" />

    <TextView
        android:id="@+id/city1ResultText"
        android:layout_width="151dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/marginBig"
        android:text="@string/city1result"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/city2ResultText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rightWrongResultText" />

    <TextView
        android:id="@+id/city2ResultText"
        android:layout_width="151dp"
        android:layout_height="120dp"
        android:text="@string/city2result"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/city1ResultText"
        app:layout_constraintTop_toTopOf="@+id/city1ResultText" />

    <Button
        android:id="@+id/btnNextResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scoreResultText"
        app:layout_constraintTop_toTopOf="@+id/scoreResultText" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/share"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/scoreResultText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/scoreResultText"
        app:layout_constraintTop_toTopOf="@+id/scoreResultText" />

</androidx.constraintlayout.widget.ConstraintLayout>